@@ -1,6 +1,11 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2
 
+  02 Sep 2005; Martin Schlemmer <azarah@gentoo.org>:
+
+    Split the enviroment whitelist for runscript into a system and user part.
+    Update it to use LIBDIR so that we can set 'lib' or 'lib64'.
+
   02 Sep 2005; Roy Marples <uberlord@gentoo.org>:
 
     We also set MTU in the pre_start of ifconfig/iproute2 incase a DHCP
